# xps-forensic

./: .gitignore  BUGS.md  CLAUDE.md  cpsl-theoretical-analysis.md  deep-research-report.md
xps_forensic/: .gitignore  BUGS.md  environment.yaml  pyproject.toml
xps_forensic/configs/: default.yaml
xps_forensic/configs/experiment/: e1_baseline.yaml
xps_forensic/docs/research/: 2026-03-29-latest-partial-spoof-models.md  2026-03-30-evaluation-metrics-analysis.md
xps_forensic/experiments/: run_e1_baseline.py  run_e2_calibration.py  run_e3_cpsl.py  run_e4_pdsm.py  run_e5_cross_dataset.py  run_e6_codec.py  run_e7_alignment.py  run_e8_ablation.py
xps_forensic/results/: monitor.html
xps_forensic/scripts/: download_datasets.sh  live_monitor.py  run_all.sh  train_sal.sh  update_xps_dashboard.py
xps_forensic/tests/: conftest.py  test_calibration.py  test_config.py  test_cpsl.py  test_data.py  test_detectors.py  test_evidence.py  test_metrics.py  test_pdsm.py
xps_forensic/xps_forensic/: __init__.py
xps_forensic/xps_forensic/calibration/: __init__.py  methods.py  metrics.py
xps_forensic/xps_forensic/cpsl/: __init__.py  composed.py  crc.py  nonconformity.py  scp_aps.py
xps_forensic/xps_forensic/data/: __init__.py  base.py  hqmpsd.py  llamapartialspoof.py  partialedit.py  partialspoof.py
xps_forensic/xps_forensic/detectors/: __init__.py  bam.py  base.py  cfprf.py  mrm.py  sal.py
xps_forensic/xps_forensic/evidence/: __init__.py  schema.py
xps_forensic/xps_forensic/pdsm_ps/: __init__.py  alignment.py  discretize.py  faithfulness.py  perturbation.py  saliency.py
(+47 files in other folders)
