[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xps-forensic"
version = "0.1.0"
description = "Calibrated explainability pipeline for partial audio spoof localization"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "transformers>=4.35",
    "captum>=0.7",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "numpy>=1.24",
    "pandas>=2.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "soundfile>=0.12",
    "librosa>=0.10",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[tool.setuptools.packages.find]
include = ["xps_forensic*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
